# intentify

./: App.tsx  README.md  app.json  babel.config.js  cesconfig.jsonc  env.d.ts  metro.config.js  package-lock.json  package.json  polyfills.ts  tailwind.config.js  types.d.ts
components/: AnimatedButton.tsx  FloatingActionButton.tsx  FundingHelperModal.tsx  IntentBuilder.tsx  PullToRefresh.tsx  RugproofAnalyzer.tsx  SwipeableCard.tsx
constants/: Colors.ts
contracts/: Anchor.toml  IntentExecutor.ts  LaunchpadExecutor.ts  package-lock.json
contracts/programs/contracts/: Cargo.toml
contracts/programs/contracts/src/: integrations.rs  lending_integrations.rs  lib.rs
devnet-contract/: Anchor.toml
devnet-contract/programs/devnet-contract/: Cargo.toml
devnet-contract/programs/devnet-contract/src/: lib.rs
launchpad-contract/: Anchor.toml
launchpad-contract/programs/launchpad-contract/: Cargo.toml
launchpad-contract/programs/launchpad-contract/src/: lib.rs
mobile-services/: README.md  config.ts  example.ts  index.ts  intentfi-service.ts  launchpad-service.ts  package.json  tsconfig.json
providers/: PhantomProvider.tsx  SolanaProvider.tsx  TurnkeyAuthProvider.tsx
screens/: DashboardScreen.tsx  IntentScreen.tsx  LaunchpadScreen.tsx  PortfolioScreen.tsx  SettingsScreen.tsx  WalletOnboardingScreen.tsx
scripts/: authority-keypair.json  initialize-launchpad.ts  initialize-protocol.ts  launchpad-authority-keypair.json  setup-contract.ts  test-swap-transaction.ts  test-token-launch-node.ts  test-token-launch.ts  test-user-init.ts  tsconfig.json
services/: config.ts  funded-wallet-pool.ts  goldrush-service.ts  groq-ai-service.ts  index.ts  intent-api-service.ts  intentfi-service.ts  jupiter-swap-service.ts  launchpad-service.ts  token-metadata-service.ts  transaction-service.ts  turnkey-auth-service.ts  turnkey-solana-service.ts  wallet-service.ts
utils/: decryptPayload.ts  encryptPayload.ts
(+2 files in other folders)
