[package]
name = "launchpad-contract"
version = "0.1.0"
description = "Token launchpad contract for devnet testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "launchpad_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }

[dev-dependencies]
solana-program-test = "~1.18.17"
solana-sdk = "~1.18.17"
tokio = { version = "1.0", features = ["macros"] } 